--- a/templates/base.html
+++ b/templates/base.html
@@ -124,13 +124,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-add.html" class="nav-link">
+                <a href="/statistics" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Статистика</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-edit.html" class="nav-link">
+                <a href="/invoice" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Оплата</p>
                 </a>
@@ -149,31 +149,31 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="pages/examples/invoice.html" class="nav-link">
+                <a href="/all_posts" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Планировщик</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/profile.html" class="nav-link">
+                <a href="/bad_words" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Блокировка за нецензурщину</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/projects.html" class="nav-link">
+                <a href="/spam" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Блокировка за спам</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-add.html" class="nav-link">
+                <a href="/chat_statistics" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Статистика</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-edit.html" class="nav-link">
+                <a href="/moderator" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Модератор</p>
                 </a>
@@ -192,31 +192,37 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="pages/examples/invoice.html" class="nav-link">
+                <a href="/all_restaurants" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Заведения</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/profile.html" class="nav-link">
+                <a href="/all_types" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Категории</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/projects.html" class="nav-link">
+                <a href="/all_banners" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Баннеры</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-add.html" class="nav-link">
+                <a href="/all_posts" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Статьи</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/project-edit.html" class="nav-link">
+                <a href="/all_polls" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Опросы</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/all_users" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Юзеры</p>
                 </a>
