--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
     <section class="content">
-        Link
+        <a href="{{ link }}">{{ stat_type }}</a>
     </section>
 {% endblock %}
