--- a/templates/add_poll.html
+++ b/templates/add_poll.html
@@ -28,6 +28,7 @@
           <div class="alert alert-danger" role="alert">
               {{ error }}
           </div>
+            {% endfor %}
             <p>
                 {{ form.publication_time.label }}<br>
                 {{ form.publication_time(class="form-control", type="time") }}
@@ -35,6 +36,7 @@
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
+            {% endfor %}
             <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         </form>
     </section>
