--- a/templates/all_types.html
+++ b/templates/all_types.html
@@ -9,35 +9,43 @@
                             #
                         </th>
                         <th style="width: 20%">
-                            Name
+                            Название
                         </th>
                         <th>
-                            English name
+                           Английское название
+                        </th>
+                        <th>
+                            Только для VIP
                         </th>
                         <th style="width: 20%">
                         </th>
                     </tr>
                 </thead>
                 <tbody>
+                {% for elem in types %}
                     <tr>
                         <td>
-                            1
+                            {{ elem.id }}
                         </td>
                         <td>
-                            Название заведения
+                            {{ elem.type_name }}
                         </td>
                         <td class="project_progress">
-                            English name
+                            {{elem.type_name_en}}
+                        </td>
+                        <td>
+                            {{ elem.only_vip }}
                         </td>
                         <td class="project-actions text-right">
-                          <a class="btn btn-primary btn-sm" href="#">
+                          <a class="btn btn-primary btn-sm" href="/edit_category/{{ elem.id }}">
                               Редактировать
                           </a>
                         </td>
                     </tr>
+                {% endfor %}
                 </tbody>
             </table>
-            <a><button type="button" class="btn btn-success">Добавить</button></a>
+            <a href="/add_category"><button type="button" class="btn btn-success">Добавить</button></a>
           </div>
     </section>
 {% endblock %}
