--- a/templates/all_banners.html
+++ b/templates/all_banners.html
@@ -38,6 +38,9 @@
                               {{elem.id}}
                           </td>
                           <td>
+                              {{ elem.name }}
+                          </td>
+                          <td>
                               {{ elem.text }}
                           </td>
                       </tr>
