--- a/templates/all_restaurants.html
+++ b/templates/all_restaurants.html
@@ -56,7 +56,7 @@
                               {{elem.requested}}
                           </td>
                           <td class="project-actions text-right">
-                            <a class="btn btn-primary btn-sm" href="#">
+                            <a class="btn btn-primary btn-sm" href="/edit_restaurant/{{elem.id}}">
                                 Редактировать
                             </a>
                           </td>
