--- a/templates/poll.html
+++ b/templates/poll.html
@@ -3,7 +3,7 @@
     <section class="content">
         <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Баннеры</h3>
+              <h3 class="card-title">Опросы</h3>
 
               <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -27,28 +27,28 @@
                           <th>
                               %
                           </th>
-                          <th style="width: 20%">
-                          </th>
                       </tr>
                   </thead>
                   <tbody>
+                  {% for variant in variants %}
                       <tr>
                           <td>
-                              1
+                              {{variant[0]}}
                           </td>
                           <td>
-                              Вариант 1
+                              {{variant[1]}}
                           </td>
                           <td class="project_progress">
                             <div class="progress progress-sm">
-                                <div class="progress-bar bg-green" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%">
+                                <div class="progress-bar bg-green" role="progressbar" aria-valuenow="{{variant[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{variant[2]}}%">
                                 </div>
                             </div>
                             <small>
-                                77%
+                                {{variant[2]}}
                             </small>
                         </td>
                       </tr>
+                  {% endfor %}
                   </tbody>
               </table>
             </div>
