--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <section class="content">
-        <a href="{{ link }}">{{ stat_type }}</a>
+        {% for elem in stats %}
+        <a href="{{ elem[1] }}">{{ elem[0] }}</a><br>
+        {% endfor %}
     </section>
 {% endblock %}
