--- a/templates/all_restaurants.html
+++ b/templates/all_restaurants.html
@@ -33,6 +33,9 @@
                           <th>
                               Запросов
                           </th>
+                          <th>
+                              Владелец (Id)
+                          </th>
                           <th style="width: 20%">
                           </th>
                       </tr>
@@ -54,6 +57,9 @@
                           </td>
                           <td>
                               {{elem.requested}}
+                          </td>
+                          <td>
+                              {{elem.owner}}
                           </td>
                           <td class="project-actions text-right">
                             <a class="btn btn-primary btn-sm" href="/edit_restaurant/{{elem.id}}">
