--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/index" class="nav-link">Home</a>
       </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <span class="nav-link">Дата и время системы {{datetime}}</span>
+      </li>
     </ul>
   </nav>
   <!-- /.navbar -->
