--- a/templates/change_phrase.html
+++ b/templates/change_phrase.html
@@ -4,9 +4,9 @@
         <form method="post" novalidate enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <p>
-                {{ form.text.label }}<br>
-                {{ form.text(class="form-control") }}
-                {% for error in form.text.errors %}
+                {{ form.name.label }}<br>
+                {{ form.name(class="form-control") }}
+                {% for error in form.name.errors %}
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
