--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -31,7 +31,7 @@
                             {{elem[1]}}
                         </td>
                         <td class="project-actions text-right">
-                          <a class="btn btn-primary btn-sm" href="#">
+                          <a class="btn btn-primary btn-sm" href="change_phrase/{{elem[0]}}">
                               Редактировать фразу
                           </a>
                         </td>
